automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
     }
    ],
    "source": [
-    "list(fork_fig.keys()) == fron"
+    "list(fork_fig.keys()) == frontier_restaurant"
    ]
   },
   {
