automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
     }
    ],
    "source": [
-    "list(fork_fig.keys()) == list(frontier_restaurant.keys())"
+    "list(fork_fig.keys()"
    ]
   },
   {
