--- a/index.ipynb
+++ b/index.ipynb
@@ -288,6 +288,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    not_closed\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed']"
    ]
