--- a/index.ipynb
+++ b/index.ipynb
@@ -290,8 +290,8 @@
     "def open_restaurants(restaurants):\n",
     "    not_closed = []\n",
     "    for restaurant in restaurants:\n",
-    "        if  !restaurant['is_closed']:\n",
-    "            "
+    "        if  restaurant['is_closed']:\n",
+    "            not_clos"
    ]
   },
   {
