automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "    for restaurant in restaurants:\n",
     "        if  !restaurant['is_closed']:\n",
     "            not_closed.append[restaurant]\n",
-    "return"
+    "return not_closed"
    ]
   },
   {
