--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "    for restaurant in restaurants:\n",
     "        if  restaurant['is_closed']:\n",
     "            not_closed\n",
-    "    return not_closed"
+    "         elsenot_closed"
    ]
   },
   {
