--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,8 @@
     "    for restaurant in restaurants:\n",
     "        if  restaurant['is_closed']:\n",
     "            not_closed\n",
-    "         elsenot_closed"
+    "        else:\n",
+    "            not_closed"
    ]
   },
   {
