--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
     "        if  restaurant['is_closed']:\n",
     "            not_closed\n",
     "        else:\n",
-    "            not_closed"
+    "            not_closed.append()"
    ]
   },
   {
