--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
     "        if  restaurant['is_closed']:\n",
     "            not_closed\n",
     "        else:\n",
-    "            not_closed.append()"
+    "            not_closed.append(restaurant)"
    ]
   },
   {
