--- a/index.ipynb
+++ b/index.ipynb
@@ -283,24 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-25-5aa3c658f075>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-5aa3c658f075>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    not_closed = []\n",
     "    for restaurant in restaurants:\n",
     "        if  restaurant['is_closed']:\n",
-    "            \n",
+    "            None\n",
     "        else:\n",
     "            not_closed.append(restaurant)"
    ]
