automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,8 @@
     "        if  restaurant['is_closed']:\n",
     "            None\n",
     "        else:\n",
-    "            not_closed.append(restaurant)"
+    "            not_closed.append(restaurant)\n",
+    "    return"
    ]
   },
   {
