automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
     "            None\n",
     "        else:\n",
     "            not_closed.append(restaurant)\n",
-    "    return"
+    "    return not_closed"
    ]
   },
   {
